--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
 	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-		sans-serif;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
+		"Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
@@ -11,11 +11,11 @@ code {
 }
 .wrapper {
 	display: grid;
-	grid-template-rows: 60px 1fr;
+	grid-template-rows: 90px 1fr;
 	grid-template-columns: 2fr 10fr;
-	grid-gap: 10px;
+	grid-gap: 30px;
 	max-width: 1200px;
-	color: #fff;
+	color: #a0a3bd;
 	margin: 0 auto;
 	grid-template-areas:
 		"header header"
@@ -24,26 +24,4 @@ code {
 a {
 	color: #fff;
 	text-decoration: none;
-}
-.header__logo img {
-	width: 50px;
-}
-.header {
-	grid-area: header;
-	background-color: #20232a;
-}
-.header__content {
-	height: 60px;
-	display: flex;
-	align-items: center;
-}
-.nav {
-	grid-area: nav;
-	background-color: #3a4d7a;
-	text-align: center;
-	font-size: 15px;
-	font-weight: 500;
-}
-.content {
-	grid-area: content;
 }
